--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World hallal</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<a href="https://www.thingiverse.com/" target="_blank">thingiverse.com</a>
