--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<a href="https://www.thingiverse.com/" target="_blank">thingiverse.com</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="20; url='https://www.thingiverse.com'" />
+  </head>
+  <body>
+    <p>Please follow <a href="https://www.thingiverse.com">this link</a>.</p>
+  </body>
+</html>
