--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; url='https://www.thingiverse.com'" />
-  </head>
-  <body>
-    <p>Please follow <a href="https://www.thingiverse.com">this link</a>.</p>
-  </body>
-</html>
+<meta http-equiv="Refresh" content="0; url='https://www.w3docs.com'" />
