--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<meta http-equiv="Refresh" content="0; url='https://www.w3docs.com'" />
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url='https://wa.me/96178877832'" />
+  </head>
+  <body>
+    <p>Please follow <a href="https://wa.me/96178877832">this link</a>.</p>
+  </body>
+</html>
