--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://wa.me/96178877832'" />
+    <meta http-equiv="refresh" content="0; url='https://www.ulfg.ul.edu.lb'" />
   </head>
   <body>
-    <p>Please follow <a href="https://wa.me/96178877832">this link</a>.</p>
+    <p>Please follow <a href="https://www.ulfg.ul.edu.lb">this link</a>.</p>
   </body>
 </html>
