--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="1; url='https://http://www.ulfg.ul.edu.lb/'" />
+    <meta http-equiv="refresh" content="1; url='https://chat.whatsapp.com/Gc0mBiPOz8112qIDtxIdAG'" />
   </head>
   <body>
-    <p>Please follow <a href="https://http://www.ulfg.ul.edu.lb/">this link</a>.</p>
+    <p>Please follow <a href="https://chat.whatsapp.com/Gc0mBiPOz8112qIDtxIdAG">this link</a>.</p>
   </body>
 </html>
