--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta http-equiv="Cache-Control" content="private, no-store" />
     <meta http-equiv="refresh" content="1; url='https://chat.whatsapp.com/Gc0mBiPOz8112qIDtxIdAG'" />
   </head>
   <body>
