--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="Cache-Control" content="private, no-store" />
-    <meta http-equiv="refresh" content="3; url='https://thingiverse.com'" />
+    <meta http-equiv="refresh" content="3; url='https://youtube.com'" />
   </head>
   <body>
     <p>Please follow <a href="https://chat.whatsapp.com/Gc0mBiPOz8112qIDtxIdAG">this link</a>.</p>
