--- a/index.html
+++ b/index.html
@@ -1,9 +1,2 @@
-<html>
-  <head>
-    <meta http-equiv="Cache-Control" content="private, no-store" />
-    <meta http-equiv="refresh" content="3; url='https://youtube.com'" />
-  </head>
-  <body>
-    <p>Please follow <a href="https://chat.whatsapp.com/Gc0mBiPOz8112qIDtxIdAG">this link</a>.</p>
-  </body>
-</html>
+<meta http-equiv="Cache-Control" content="private, no-store" />
+<meta http-equiv="refresh" content="3; url='https://whatsapp.com'" />
