--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <meta http-equiv="Cache-Control" content="private, no-store" />
-<meta http-equiv="refresh" content="3; url='https://whatsapp.com'" />
+<meta http-equiv="refresh" content="3; url='https://thingiverse.com'" />
