--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <meta http-equiv="expires" content="0">
-<meta http-equiv="refresh" content="3; url='https://thingiverse.com'" />
+<meta http-equiv="refresh" content="3; url='https://youtube.com'" />
