--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <meta http-equiv="expires" content="0">
 <meta http-equiv="refresh" content="3; url='https://youtube.com'" />
+<meta http-equiv="expires" content="0">
