--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <meta http-equiv="expires" content="0">
-<meta http-equiv="refresh" content="3; url='https://thingiverse.com'" />
+<meta http-equiv="refresh" content="3; url='https://whatsapp.com'" />
 <meta http-equiv="expires" content="0">
