--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<meta http-equiv="expires" content="0">
-<meta http-equiv="refresh" content="3; url='https://whatsapp.com'" />
-<meta http-equiv="expires" content="0">
++<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+  </head>
+  <body>
+    <meta http-equiv="refresh" content="5; url='https://www.samsung.com'" />
+    <p>Please follow <a href="https://www.samsung.com">this link</a>.</p>
+  </body>
+</html>
