--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-+<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
@@ -6,7 +6,7 @@
     <meta http-equiv="Expires" content="0" />
   </head>
   <body>
-    <meta http-equiv="refresh" content="5; url='https://www.bbc.com'" />
-    <p>Please follow <a href="https://www.samsung.com">this link</a>.</p>
+    <meta http-equiv="refresh" content="0; url='https://www.cnn.com'" />
+    <p>Please follow <a href="https://www.cnn.com">this link</a>.</p>
   </body>
 </html>
