--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Expires" content="0" />
   </head>
   <body>
-    <meta http-equiv="refresh" content="0; url='https://www.cnn.com'" />
+    <meta http-equiv="refresh" content="0; url='https://www.bbc.com'" />
     <p>Please follow <a href="https://www.cnn.com">this link</a>.</p>
   </body>
 </html>
