--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <meta http-equiv="refresh" content="5; url='https://www.thingiverse.com'" />
+    <meta http-equiv="refresh" content="0; url='https://chat.whatsapp.com/Gc0mBiPOz8112qIDtxIdAG'" />
   </head>
   <body>
-    <p>Please follow <a href="https://www.youtube.com">this link</a>.</p>
+    <p>Please follow <a href="https://chat.whatsapp.com/Gc0mBiPOz8112qIDtxIdAG">this link</a>.</p>
   </body>
 </html>
