--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+ <!--
+ <head>
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
@@ -9,4 +10,8 @@
   <body>
     <p>Please follow <a href="https://chat.whatsapp.com/FAitdvUZeva4ryj7u98StF">this link</a>.</p>
   </body>
+-->
+<script>
+window.location.href = "https://cnn.com/";
+</script>
 </html>
